spacing fixes

--- a/assets/css/06-components/_components.blog-latest.scss
+++ b/assets/css/06-components/_components.blog-latest.scss
@@ -1,6 +1,12 @@
 .c-blog-latest {
   @include container;
 
+  margin-bottom: gap(4);
+
+  @media (min-width: $md) {
+    margin-bottom: gap(8);
+  }
+
   &__wrapper {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(256px, 1fr));
