--- a/assets/css/06-components/_components.newsletter.scss
+++ b/assets/css/06-components/_components.newsletter.scss
@@ -1,8 +1,10 @@
 .c-newsletter {
   background-color: $primary;
   padding: gap(4) 0;
+  margin-top: gap(8);
 
   @media (min-width: $md) {
+    margin-top: gap(16);
     padding: gap(8) 0;
   }
 
